--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "typescript": "5.6.2"
